--- a/example/src/main/AndroidManifest.xml
+++ b/example/src/main/AndroidManifest.xml
@@ -10,6 +10,10 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".VectorTestActivity"
+            android:label="@string/title_activity_vector_test" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
