--- a/example/build.gradle
+++ b/example/build.gradle
@@ -24,4 +24,5 @@ dependencies {
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.jakewharton:butterknife:6.1.0'
 }
