--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,16 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+# Update this value when releasing a new version of the library.
+elasticLibraryVersionName=1.0.0
+
+#TO BE EDITED, REGISTRATION WITH SONATATYPE NEEDED
+
+signing.keyId=94B86DB8
+signing.password=PrivateKeyPassword
+signing.secretKeyRingFile=/path/to/gpg/secring.gpg
+
+sonatypeRepo=https://oss.sonatype.org/service/local/staging/deploy/maven2/
+sonatypeUsername=YourSonatypeJiraUsername
+sonatypePassword=YourSonatypeJiraPassword
