moving upload task to library module

--- a/gradle.properties
+++ b/gradle.properties
@@ -22,10 +22,10 @@ elasticLibraryVersionName=1.0.0
 
 #TO BE EDITED, REGISTRATION WITH SONATATYPE NEEDED
 
-signing.keyId=94B86DB8
-signing.password=PrivateKeyPassword
-signing.secretKeyRingFile=/path/to/gpg/secring.gpg
+signing.keyId=D8E85687
+signing.password=72d4dbc6
+signing.secretKeyRingFile=/Users/thibaultguegan/.gnupg/secring.gpg
 
 sonatypeRepo=https://oss.sonatype.org/service/local/staging/deploy/maven2/
-sonatypeUsername=YourSonatypeJiraUsername
-sonatypePassword=YourSonatypeJiraPassword
+sonatypeUsername=thibault.guegan
+sonatypePassword=72d4dbc6
