--- a/example/build.gradle
+++ b/example/build.gradle
@@ -20,7 +20,7 @@ android {
 }
 
 dependencies {
-    compile project(':library')
+    compile project(':elasticdownload')
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
