--- a/elasticdownload/build.gradle
+++ b/elasticdownload/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "22.0.1"
 
     defaultConfig {
-        minSdkVersion 14
+        minSdkVersion 8
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
@@ -23,5 +23,6 @@ apply from: 'https://raw.github.com/chrisbanes/gradle-mvn-push/master/gradle-mvn
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.1.1'
-    compile 'com.wnafee:vector-compat:1.0.5'
+    compile 'com.nineoldandroids:library:2.4.0+'
+    //compile 'com.wnafee:vector-compat:1.0.5'
 }
